# heraia

./: .gitignore  AUTHORS  ChangeLog  Description  HISTORY  Makefile.am  NEWS  README  RoadMap  TODO  autoclean  autoclean.sh  autogen.sh  check_dependencies.sh  config.h.in  configure.ac  cp_glades  heraia.csv  heraia.desktop  heraia.iss
docs/: heraia.doxygen  links  make_devel_docs.sh  make_docs.sh  test-suite  test_file
libheraia/: Makefile.am  data_interpretor.c  data_type.c  decode.c  find_replace_window.c  ghex_heraia_interface.c  goto_dialog.c  heraia_io.c  heraia_ui.c  libheraia.c  list_data_types.c  log.c  main_pref_window.c  plugin.c  plugin_list.c  result_window.c  tests.c  treatments.c  user_prefs.c
libheraia/include/: data_interpretor.h  data_type.h  decode.h  find_replace_window.h  ghex_heraia_interface.h  goto_dialog.h  heraia_errors.h  heraia_io.h  heraia_ui.h  libheraia.h  list_data_types.h  log.h  main_pref_window.h  plugin.h  plugin_list.h  result_window.h  tests.h  treatments.h  user_prefs.h
pixmaps/: Makefile.am
pixmaps/hicolor/: Makefile.am
pixmaps/hicolor/128x128/apps/: Makefile.am
pixmaps/hicolor/16x16/apps/: Makefile.am
pixmaps/hicolor/256x256/apps/: Makefile.am
pixmaps/hicolor/32x32/apps/: Makefile.am
pixmaps/hicolor/48x48/apps/: Makefile.am
pixmaps/hicolor/64x64/apps/: Makefile.am
plugins/: Makefile.am
plugins/stat/: Makefile.am  stat.c  stat.glade  stat.gtkbuilder  stat.h
po/: POTFILES.in  fr.po  heraia.po  heraia_xgettext.sh  xgettext_command
python/: libheraia_tests.py
src/: Makefile.am  data_interpretor.c  data_type.c  decode.c  ghex_heraia_interface.c  graphic_analysis.c  heraia.c  heraia.glade  heraia.gtkbuilder  heraia_io.c  heraia_ui.c  heraia_ui.xml  io.c  libheraia.c  list_data_types.c  log.c  plugin.c  plugin_list.c  treatments.c  user_prefs.c
src/include/: data_interpretor.h  data_type.h  decode.h  ghex_heraia_interface.h  graphic_analysis.h  heraia-errors.h  heraia.h  heraia_errors.h  heraia_io.h  heraia_types.h  heraia_ui.h  io.h  libheraia.h  list_data_types.h  log.h  plugin.h  plugin_list.h  treatments.h  types.h  user_prefs.h
tests/: heraia_self_tests.sh
