SUBDIRS = libheraia src plugins pixmaps

gnomemenufiles =		\
	heraia.desktop

gnomemenudir = $(datadir)/applications/

dist_gnomemenu_DATA = $(gnomemenufiles)

EXTRA_DIST =				\
	HISTORY					\
	autogen.sh				\
	autoclean.sh			\
    check_dependencies.sh	\
    Description				\
	RoadMap					\
	heraia.iss				\
	$(gnomemenufiles)
