SUBDIRS = libheraia src plugins pixmaps

gnomemenufiles =		\
	heraia.desktop

gnomemenudir = $(datadir)/applications

dist_gnomemenu_DATA = $(gnomemenufiles)

ACLOCAL_AMFLAGS = -I m4

EXTRA_DIST = config.rpath 				\
	HISTORY					\
	autogen.sh				\
	autoclean.sh			\
    check_dependencies.sh	\
    Description				\
	RoadMap					\
	heraia.iss				\
	$(gnomemenufiles)

