SUBDIRS = libheraia src plugins pixmaps po

gnomemenufiles =		\
	heraia.desktop

gnomemenudir = $(datadir)/applications

dist_gnomemenu_DATA = $(gnomemenufiles)

ACLOCAL_AMFLAGS = -I m4

EXTRA_DIST =  				\
	HISTORY					\
	autogen.sh				\
	autoclean.sh			\
    check_dependencies.sh	\
    Description				\
	RoadMap					\
	heraia.iss				\
	$(gnomemenufiles)

